<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smoke"
    tools:context=".Dashboard">

    <ImageView
        android:id="@+id/parking"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_parking" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parking"
        android:layout_centerHorizontal="true"
        android:textColor="@color/grey"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/dashboard" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/titlePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/plate"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titlePlate">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edit_text"
                    android:fontFamily="@font/gilroy_medium"
                    android:gravity="center"
                    android:inputType="text|textCapCharacters"
                    android:textColor="#101010"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/numberPlate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/cameraBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/gas"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/select"
                    android:textColor="@color/grey"
                    android:textSize="13sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/carImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/rel"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/content_description" />

            <Button
                android:id="@+id/finish"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/carImage"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_black_rounded"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/next"
                android:textColor="@color/smoke"
                android:textSize="13sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>